--- a/thesis.tex
+++ b/thesis.tex
@@ -87,6 +87,8 @@
 \usepackage{util} % MDH: Contains my custom commands
 \usepackage{notations} % MDH: So I don't have to repeat myself so much
 \usepackage{hhline}  % MDH: For double lines in tables
+\usepackage{tkz-euclide}  % MDH: To make it easier to label points in Tikz
+
 
 % To control where figures are output
 \usepackage{epstopdf}
