Changed phrasing of preference space phrasing

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -53,7 +53,7 @@ in~\autoref{fig:system-metric-space}.
         \node at (\n)[circle,fill,inner sep=1.75pt]{};
     \end{tikzpicture}
 
-    \caption{Example preference metric space, where \truthof{x} represent the
+    \caption{Example of a preference metric space, where \truthof{x} represents the
     preference of agent $x$.}
     \label{fig:system-metric-space}
 \end{figure}
