--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -26,7 +26,15 @@ The proxy voting system makes use of a model developed by \etal{Cohensius} in th
 article~\cite{Cohensius2017}.
 This model places voters' preferences in a metric space, such as
 in~\autoref{fig:system-metric-space}.
-
+% Explain what Cohensius did
+%   - Strategic participation
+%   - Infinite voters
+%   - Voting Mechanisms
+% Explain what I'm borrowing and what I'm doing differently
+%   - Compulsory use of proxies
+%   - Finite voters
+%   - Additional voting mechanisms
+%   - Weighting mechanisms
 
 \begin{figure}[htbp]
     \centering
