--- a/content/chapter2-experimental-design.tex
+++ b/content/chapter2-experimental-design.tex
@@ -6,13 +6,13 @@
 In order to identify the ability of proxy voting to serve as a correctional
 method, a number of experiments have been devised.
 The primary goal of these analyses is to identify the strengths and
-weaknesses of proxy voting under certain conditions and attempt to minimize
-the costs of ensuring accurate measurements.
+weaknesses of the proxy voting system under certain conditions and attempt to minimize
+the costs while still ensuring accurate measurements.
 
 
 \section{Preliminaries}\label{sec:preliminaries}
 This section will provide a brief overview of the proxy voting system, as well how it
-generally works.
+works.
 
 \vicki{My first impression is that what you are trying to do likely goes my many
 different names. I don't think you can assume that proxy voting is how everyone will
@@ -23,16 +23,21 @@ done to solve the same problem.}
 \label{subsec:system-design-and-agent-space}
 Each system \system\ will output some estimation \systemtruth\ of the truth
 \truth.
-This will be done by allowing the set of agents belonging to \system,
-known as \systemagents, to observe \truth\ and provide their
-own estimation \agenttruth, where \agent\ is an individual agent.
-These estimations will then be compiled into \systemtruth\ using
+While in the real world one would likely not know the true value of \truth, during the
+analyses the value of \truth\ will be known so error can be properly calculated.
+The system will produce \systemtruth\ by allowing the set of agents belonging to
+\system, known as \systemagents, to attempt to observe \truth\ and provide their own
+estimation \agenttruth, where \agent\ is an individual agent.
+Keeping in mind that the system's agents are measurement techniques, an agent
+attempting to observe \truth\ is the act of performing a measurement.
+These estimations will then be coalesced into \systemtruth\ using
 the system's \hyperref[subsec:voting-mechanisms]{voting mechanism}.
-An agent need not provide the same \agenttruth\ for the same \truth,
-and by extension \systemtruth\ may not be the same each time a
-system is run.
-\vicki{so is there a single item we are trying to learn about? Does truth change over
-time?}
+An agent need not provide the same \agenttruth\ for the same \truth\ since taking
+measurement twice will likely not yield the exact same result due to error in taking
+the measurement, and so by extension \systemtruth\ may not be the same each time a
+system tries to estimate \truth.
+% \vicki{so is there a single item we are trying to learn about? Does truth change over
+% time?}
 
 All agents will operate within a defined space~\systemspace, where
 $\systemspace \subseteq \real^k$ and $k \geq 1$ dimensions, as described
@@ -51,6 +56,8 @@ This likewise means \systemtruth\ will be a position within \systemspace.
 
 Each system will additionally have a total system weight, denominated with
 \systemweight.
+This weight is the total amount of weight in the system, which is primarily
+determined by the \hyperref[subsec:weighting-mechanisms]{weighting mechanism} used.
 \systemweight\ can be described simply by the equation
 $\systemweight = \sum_{\agent \in \systemagents} \agentweight$, where \agentweight\
 is the weight provided by the individual agent.
@@ -58,32 +65,40 @@ is the weight provided by the individual agent.
 \subsection{Agent Types}\label{subsec:agent-types}
 This study explores the idea of using finite voters, as opposed to the
 infinite voters described in~\cite{Cohensius2017}.
-These voters' positions will be randomly selected using a distribution, which
-will vary from experiment to experiment.
+These voters' positions will be randomly selected using a probability distribution,
+which will vary from experiment to experiment.
 By design, there are two primary types of voters: expert and untrained.
 
 \textit{Expert voters} are agents that give a more accurate estimate of the
 true value.
-These voters have tighter extremes for estimated values or are chosen from
-a more accurate distribution (such as Gaussian about \truth), allowing
-them to be more certain in their estimation.
+These voters are measurements with a tighter range, or lower extent, for estimated
+values or are chosen from a more accurate distribution (such as Gaussian about
+\truth), allowing them to be more certain in their estimation.
 These voters represent better, though likely more expensive, methods for
 taking a measurement.
-\vicki{How do we know an expert voter? Do they identify themselves?}
+A real world example of this could be using a high-accuracy laser ruler to calculate
+the length of a board.
+% \vicki{How do we know an expert voter? Do they identify themselves?}
 
 \textit{Untrained voters}, on the other hand, are agents with a worse
 distribution or more extreme minimums and maximums.
-These agents have a greater degree of error, and while they might be correct
-about the true value, they are unable to be as certain about their estimations
-as the expert voters due to their possibility for error.
+These are measurement techniques that have a greater degree of error, and while they
+might be correct about the true value, they are unable to be as certain about their
+estimations as the expert voters due to the possibility for error.
 Measurement methods represented by these voters are less accurate, though
 likely cheaper.
+Instead of a laser ruler, an example of this could be using a school ruler or
+estimating by placing an arm on the board.
 
-%  - Finite with agent costs
+The type of agent is primarily determined by the other agents used.
+A school ruler would almost certainly be considered untrained compared to a laser ruler,
+but it could be considered expert when compared to `just eyeballing it.'
+A goal of this study is to determine how these types of
+agents interact and inform a potential system designer using the proposed system on
+how many expert voters and untrained voters they need to use.
 
-
-\section{Experiment Criteria and Parameters}\label{sec:experiment-criteria
--and-parameters}
+\section{Experiment Criteria and Parameters}
+\label{sec:experiment-criteria-and-parameters}
 Both untrained and expert voters have the same goal: to enhance the accuracy of
 the system.
 They will work in tandem in order to accomplish this goal.
@@ -91,33 +106,51 @@ There are two immediately identifiable ways to use both types of voters which
 will be explored in this paper.
 First, the experts can be used as proxies and the untrained as inactive voters.
 This exploits the idea discussed in~\cite{Miller1969, Mueller1972} of
-allowing experts to guide the system while still pulling information from the
-other agents.
-\vicki{I'm not seeing how they are pulling information from the other agents.}
+allowing experts to guide the system.
+The untrained voters will then reinforce the estimates provided by the experts by
+helping to identify the experts that appeal the most to the untrained agents.
+On an individual level, each untrained agent will create a ranking for the
+experts/proxies determined by how much the proxy's preference differs from the
+untrained agent.
+It will then apply weights to each proxy using the system-assigned weighting mechanism
+according to the proxy's rank.
+This approach could be compared to getting a list of the best restaurants from food
+critics, then asking friends and family which restaurant they like the most from
+that list.
+% \vicki{I'm not seeing how they are pulling information from the other agents.}
 
 The second obvious way to employ these agents is using the untrained voters
-and the proxies and allowing the experts to transfer their voting power to them.
+as the proxies and allowing the experts to transfer their voting power to them.
 This is the direct inverse of the previous setup.
 This strategy is based on the intuition that since untrained voters are likely
 cheaper and so can be more numerous, they have a better chance of being closer
 to the true value due to the law of large numbers.
+The experts would then bring \systemtruth\ closer to \truth\ by allocating more
+weight to the untrained agents that are closest to \truth.
+Assuming the expert preferences are actually more likely to be closer to \truth,
+this strategy should work even if the majority of untrained voters are biased away from
+\truth, since in such a scenario a large amount of weight would be placed on those
+untrained agents that are closest to \truth.
 Naturally, this technique would be most beneficial when untrained agents use a
 distribution with a decent likelihood of the true value being included, such
-as Gaussian or uniform.
+as uniform.
 While this study does not plan to exploit the law of large numbers anywhere
 near its full potential, this setup may be beneficial where many measurements
 can be taken or when untrained agents are considerably less expensive than
 experts.
+Instead of going to food critics first, this could be compared to asking friends and
+family about their favorite restaurants, then seeing how the critics review those
+restaurants before choosing.
 
-Both setups will be examined in this study.
+Both approaches will be examined in this study.
 Fortunately, the process of how to create the setups is identical.
 The only difference is which type of agent serves as proxies.
-\vicki{It isn't clear the setup. So the untrained voters have information that is
-felt to be accurate (on average). How is this true if they are untrained? Can you
-give me a specific example? Suppose I was trying to decide the best medication for
-covid. My experts are medical professionals who have done studies. Are my untrained
-voters ones who have had a small amount of experience, which may be helpful?
-Is the proxy the voter who actually votes?}
+% \vicki{It isn't clear the setup. So the untrained voters have information that is
+% felt to be accurate (on average). How is this true if they are untrained? Can you
+% give me a specific example? Suppose I was trying to decide the best medication for
+% covid. My experts are medical professionals who have done studies. Are my untrained
+% voters ones who have had a small amount of experience, which may be helpful?
+% Is the proxy the voter who actually votes?}
 
 \subsection{Criteria}\label{subsec:criteria}
 A system is only as good as its ability to perform.
@@ -146,8 +179,8 @@ squared distance
     \text{,}\label{eq:loss}
 \end{align}
 where $\systemtruth_k$ and $\truth_k$ are the $k$th
-dimension of the estimated and real truth respectively.
-\vicki{So is $\systemtruth_k$ what the set estimates and $\truth_k$ the actual truth?}
+dimension of the truth as estimated by the system and real truth respectively.
+% \vicki{So is $\systemtruth_k$ what the set estimates and $\truth_k$ the actual truth?}
 
 The next criteria used to judge systems is the cost of the system.
 The total cost of a system \systemcost\ is calculated as
@@ -187,18 +220,19 @@ Finally, each system will receive two mechanisms: a
 \hyperref[subsec:voting-mechanisms]{voting mechanism} and a
 \hyperref[subsec:weighting-mechanisms]{weighting mechanism}.
 The weighting mechanism will be used to apply weights to each proxy, and the
-voting mechanism will be used to condense all~\agenttruth\ to
-produce~\systemtruth.
+voting mechanism will be used to condense all~\agenttruth\ to produce~\systemtruth.
 
 \subsubsection{Agent Parameters}\label{subsubsec:agent-parameters}
 Similar to systems, each type of agent will have a different set of parameters.
-There are two parameters which create the most distinction between agents: their vote
-distribution and their extents.
-\vicki{So are you controlling the randomness of the vote?}
+There are two parameters which create the most distinction between agents: their
+extent and their distribution of error.
+% \vicki{So are you controlling the randomness of the vote?}
 
-The extents determine how far away from \truth\ the agent is able to vote.
+The extent determines how far away from \truth\ the agent is able to vote.
 For example, an agent with an extent of 10 could vote anywhere in the
 interval $[\truth - 10, \truth + 10]$.
+In terms of measurements, this is like saying a measurement is accurate to within
+\textpm 10 centimeters.
 While the extent determines the general boundaries, some distributions allow
 numbers slightly outside these ranges.
 For these distributions, the percent of votes inside the extents are
@@ -207,9 +241,9 @@ These extents are not meant to be known by the system, but are rather an
 estimation of the range of error about \truth\ a measurement in the real world
 might have.
 
-The vote distribution determines which distribution is used by the agent when
-attempting to measure \truth.
-The distributions used in this study are found
+The distribution of error for an agent determines which distribution is used by the
+agent when attempting to measure \truth.
+A list and images of the distributions used in this study is found
 in~\autoref{sec:distributions-used}.
 These distributions, combined with the extent, have a large influence on the
 agent's ability to measure \truth.
@@ -220,6 +254,10 @@ required, and/or any other value required by the agent.
 The cost can be assigned or reassigned at any time before calculating the
 system cost since the system itself does not need to know the cost of the
 agents it is using to estimate~\truth.
+Whereas the cost of taking a measurement will vary wildly between applications, this
+study will focus on ratios between expert and untrained agents so a potential system
+designer able determine the cost they need to expend in order to maintain system
+accuracy.
 
 % - Dimensions?
 % - Seed
@@ -249,12 +287,14 @@ mechanisms and average mechanisms.
 \systemtruth.
 This study experiments with a number of candidate mechanisms, which are
 described below.
+In all cases, some proxy is selected and its preference is used as \systemtruth.
 
 \mechanismheader{Median}\label{para:median}
 The median mechanism is one of the mechanisms used in~\cite{Cohensius2017}.
-This study builds off of their design by using finite voters instead of
-infinite, \vicki{You haven't defined an infinite voter. Do you mean an infinite
-number of voters?}as well as applying new weighting mechanisms that will likely yield
+This study differs from their study by using a finite number of voters instead of
+infinite,
+% \vicki{You haven't defined an infinite voter. Do you mean an infinite number of voters?}
+as well as applying new weighting mechanisms that will likely yield
 different results.
 The formula for the median mechanism is the same as the one used
 in~\cite[para.~2.4]{Cohensius2017}, which was described as (with some
@@ -285,14 +325,16 @@ as described with
 where \systemproxies\ is ordered by \agenttruth.
 
 \mechanismheader{Plurality}\label{para:plurality}
-\vicki{Are you using proxy to mean the voter selected or the results of their vote?}
-The plurality mechanism simply selects the proxy with the highest weight, which
-is described by
+% \vicki{Are you using proxy to mean the voter selected or the results of their vote?}
+The plurality mechanism simply selects the proxy with the highest weight, which is
+described by
 \begin{equation}
     \textbf{pl}(\systemproxies) =
     \argmax \weightof{\systemproxies}
     \text{.}\label{eq:plurality-mechanism}
 \end{equation}
+This proxy's preference then becomes \systemtruth.
+
 While a seemingly simple mechanism, plurality combined with some
 weighting mechanisms allows for other common voting systems.
 For example, plurality used with \hyperref[para:borda]{Borda weighting}
@@ -340,10 +382,10 @@ This mechanism is the core of the average mechanisms, and is used as a final
 step in most other average mechanisms.
 
 \mechanismheader{Weight by Ranked Choice}\label{para:avg-ranked-choice}
-\vicki{Again, I don't think I understand the setup. If I'm untrained, why do I even
-have an opinion that matters?}
-Each proxy is ranked by each inactive agent according to how close they are
-to the inactive agent.
+% \vicki{Again, I don't think I understand the setup. If I'm untrained, why do I even
+% have an opinion that matters?}
+Each proxy is ranked by each inactive agent according to how close their preference
+is in \systemspace\ to the inactive agent's preference.
 The number of times each proxy is ranked first is counted, and the proxy with
 the fewest votes is removed from the ranking process and given a weight of 1.
 The process continues from $1 \mathellipsis n$, where $n$ is the number of
@@ -351,9 +393,9 @@ proxies, at which point the mean mechanism is applied using the scores as
 weights.
 This results in the lowest-ranked proxy having a weight of 1, and the
 highest-ranked proxy receiving a weight of $n$.
-\vicki{So your voting space is ordered? An unordered space would be like candidates
-for president. There is no univesal ordering of most left, median, most right. But,
-    if we were voting on how much tuition to charge, it is completely orderded by cost.}
+% \vicki{So your voting space is ordered? An unordered space would be like candidates
+% for president. There is no univesal ordering of most left, median, most right. But,
+% if we were voting on how much tuition to charge, it is completely orderded by cost.}
 
 \mechanismheader{Weight by Instant Runoff}\label{para:avg-instant-runoff}
 The weight by instant runoff mechanism is similar to the
@@ -376,6 +418,13 @@ Weighting mechanisms are strategies by which inactive agents assign weights
 to proxies.
 All final weights are required to be positive in order to simplify
 calculating \systemtruth\ through the voting mechanisms.
+
+In a sense, inactive agents are electing the proxies they think have the best
+preference, and so this step can be seen as a mini-election to determine the best
+proxies.
+In every case, inactive voters will rank proxies by how far away the proxy's
+preference is to their own.
+The closer the preference is to an inactive voter's, the better its ranking.
 
 \mechanismheader{Vote for Closest}\label{para:closest}
 The vote for closest weighting mechanism is the simplest weighting mechanism.
@@ -428,13 +477,15 @@ This is done primarily to make all desired data available during the analysis
 process.
 
 Afterwards, the data will be analysed in an attempt to identify any patterns,
-strengths, or weaknesses proxy voting has as a measurement verification tool.
+strengths, or weaknesses the proxy voting system has as a measurement verification tool.
 While a seemingly simple phase, this is where the majority of the work in this study
 lies.
 Data will be graphed in multiple different ways, and tests will be run in an attempt to
 identify strengths and weaknesses of the proxy vote system, if there are any to uncover.
 
-In order to simplify various calculations, the true value for each experiment
+Since this study is only concerned about the error of the system, what the value of the
+actual truth used should not matter.
+As such, in order to simplify various calculations the true value for each experiment
 will be 0.
 This simplifies selecting the positions of each voter without any meaningful
 differences, as well as making it trivial to calculate loss by changing the
@@ -454,14 +505,18 @@ differences, as well as making it trivial to calculate loss by changing the
 
 Additionally, all extents can be set to 1, which can easily be scaled to any
 desired number simply by multiplying by that number.
-Using the same extents also makes it much easier to determine where an agent
+This is an approach similar to that taken by \etal{Cohensius} in~\cite{Cohensius2017},
+with the exception that the extents for the agents is known and that this paper's model
+allows the extents of the agents and the interval of \systemspace\ to be different.
+Using these extents also makes it much easier to determine where an agent
 can vote, since the interval will be $[-1, 1]$.
-While using extents of 1 should not make any meaningful differences to the final
-analysis in this study, it should be noted that further work could be done using
-additional extents to more accurately reflect expert and untrained measurements in
-the real world.
-\vicki{ Forcing each voter to have the same extents seems to make the cases simpler
-than they should be.}
+Using extents of 1 should not make any meaningful differences to the final
+analysis in this study, which is primarily focussed on how different error
+distributions will affect the results.
+However, it should be noted that further work could be done using additional extents
+to more accurately reflect other types of measurements in the real world.
+% \vicki{ Forcing each voter to have the same extents seems to make the cases simpler
+% than they should be.}
 
 \subsection{Data Collection}\label{subsec:data-collection}
 % Steps
@@ -470,13 +525,14 @@ steps:
 
 \begin{enumerate}[label=\textbf{\arabic*}., leftmargin=2\parindent]
     \titleditem{Generate proxies}
-    Given the space in which an experiment is to take place, the system will
-    generate a number of proxies using the given distribution.
+    Given the space \systemspace\ in which an experiment is to take place, the system
+    will take a number of measurements using the provided error distribution to serve
+    as proxies.
     The number and distribution of these proxies will depend on the
     parameters of the experiment.
 
     \titleditem{Generate inactive voters}
-    The system will then generate a set of inactive voters.
+    The system will then generate a set of inactive voters in the same way.
     Again, the number and distribution of these voters will depend on the
     experiment's parameters and will often not be the same as the proxies'
     parameters.
@@ -485,21 +541,22 @@ steps:
     Inactive voters could also differ from proxies by using different extents.
 
     \titleditem{Assign weights to proxies}
-    Using the given \hyperref[subsec:weighting-mechanisms]{weighting mechanism},
+    Using the assigned \hyperref[subsec:weighting-mechanisms]{weighting mechanism},
     each inactive voter will apply weights to one or more proxies.
     The system will sum these weights to get a total weight for each proxy.
 
     \titleditem{Estimate truth}
     Once all the weights have been calculated, the system will coalesce
-    the weights into an estimated value using the provided
+    the weights into an estimated value using the assigned
     \hyperref[subsec:voting-mechanisms]{voting mechanism}.
-    This value is the system's estimation of the true value.
+    This value is the system's estimation \systemtruth\ of the true value \truth.
 
     \titleditem{Calculate error}
     Finally, the error of the system can be calculated by using the true
     value and the system's estimation of the truth.
     This error can be used to determine how well the system worked and
-    ultimately determine if proxy voting is useful under the given parameters.
+    ultimately determine if the proxy voting system is useful under the given
+    parameters.
 \end{enumerate}
 
 Each combination of parameters will be run a number of times in order to obtain
@@ -522,7 +579,9 @@ number of questions.
     \item Which combination of voting mechanism and weighting mechanism
     produces the lowest error?
 
-    \item Do these systems work better than simply averaging all the agents' estimates?
+    \item Is it even worthwhile to use proxy voting, given we have already replaced
+    the more expensive measurement technique?
+    Or would it be better to simply average all the agents' estimates?
 
     % Ratio is likely important here
     \item How many inactive agents per proxy should be used?
@@ -544,7 +603,10 @@ identify any differences.
 Once this has been done, additional, more in-depth tests will be performed to
 determine to what degree any proxy vote system improves upon simply averaging the
 agents' votes.
-\vicki{Averaging over the votes doesn't appear to be a reasonable comparison.}
+The purpose behind this is to check if an undesirable measurement technique, as
+discussed in \autoref{ch:introduction}, could simply be replaced with a series of
+more desirable measurements without needing to add the complexities of proxy voting.
+% \vicki{Averaging over the votes doesn't appear to be a reasonable comparison.}
 
 As for the final question, the change in error will be graphed against the
 number of agents used to determine if there is any critical point where the benefit
