--- a/content/chapter4-conclusions-and-further-work.tex
+++ b/content/chapter4-conclusions-and-further-work.tex
@@ -6,9 +6,12 @@
 
 \section{Conclusions}\label{sec:conclusions}
 Proxy vote systems as a method to increase system accuracy are situational tools.
-This technique is best used when one of the distributions of error is asymmetrical,
-and thus require the expected distribution of error to be known.
-However, under the correct circumstances, a proxy vote system can be used to increase
+Assuming the system is able to be as accurate or more accurate than the undesirable
+measurement technique, the proxy voting system is best used when one of the
+distributions of error is asymmetrical.
+Unfortunately, this thus requires the expected distribution of error for the more
+desirable measurement techniques to be known.
+However, under the correct circumstances, the proxy vote system can be used to increase
 the accuracy of a system.
 Additionally, not all proxy vote systems are created equally and some combinations of
 voting and weighting mechanisms can be more effective than others.
