--- a/content/chapter3-results.tex
+++ b/content/chapter3-results.tex
@@ -82,7 +82,9 @@ Since candidate mechanisms can still be useful depending on the situation, both 
 best average mechanisms and the best candidate mechanisms will be identified.
 
 \vicki{Need to define U-tests.
-It seems biased that everyone know the true value.  When you know the true value, lots of subtle ways of cheating could get you closer.  You only have a true test when the voters don't know the correct answer.}
+It seems biased that everyone know the true value. When you know the true value, lots
+of subtle ways of cheating could get you closer. You only have a true test when the
+voters don't know the correct answer.}
 Further U-tests were performed, comparing each individual voting mechanism against
 every other individual mechanism.
 The results of this analysis can be found in
